fixed pom.xml