@@ -58,15 +58,4 @@
             <layout>default</layout>
         </repository>
     </repositories>
-
-    <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.0</version>
-        <configuration>
-            <reuseForks>true</reuseForks>
-            <argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>
-        </configuration>
-    </plugin>
-
 </project>
